--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -12,7 +12,17 @@
     </div>
     <div id="subheader">
         <div class="cart">
-        Ваша корзина пуста.  
+          {% with total_items=cart|length %}  
+            {% if total_items > 0 %}
+              Корзина:
+              <a href="{% url 'cart:cart_detail' %}">
+                {{ total_items }} Товаров на сумму
+                {{ cart.get_total_price }} руб.
+              </a>
+            {% else %}
+              Ваша корзина пуста.  
+            {% endif %}
+          {% endwith %}
         </div>  
     </div>
     <div id="content">
