--- a/myshop/shop/templates/shop/product/detail.html
+++ b/myshop/shop/templates/shop/product/detail.html
@@ -16,6 +16,11 @@
       </a>  
     </h2>
     <p class="price">{{ product.price }} руб.</p>
+    <form action="{% url 'cart:cart_add' product.id %}" method="post">
+      {{ cart_product_form }}
+      {% csrf_token %}
+      <input type="submit" value="Добавить в корзину">
+    </form>
     {{ product.description|linebreaks }}
   </div>
 {% endblock %}
